revision de toda la pagina y se agrego algo de css,flexbox y medias queris

--- a/pages/Accesorios.html
+++ b/pages/Accesorios.html
@@ -2,52 +2,63 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Tienda de ropa  accesorios alternativos"/>
+    <meta name="description" content="Tienda de ropa  accesorios alternativos"/>
     <meta name="description" content="Maria Celeste" />
-    <meta name="keywords"
-      content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"/>
+    <meta name="keywords" content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
- </head>
+  </head>
 
   <body>
-    <div class="container-grid">
-      <header class="header">
-        <div class="borderBlood-img">
-          <img
-            src="../img/BordeSangre.png"
-            alt="bordes de sangre"
-            width="100%"
-            height="500px"/>
+    <div id="container-grid">
+      <header>
+       <div class="borderBlood-img">
+          <img src="../img/BordeSangre.png"alt="bordes de sangre"
+           width="100%"
+           height="500px"/>
        </div>
-       <nav class="navegador">
-         <div class="nav-1">
-           <a href="/index.html"> Inicio </a>
-           <a href="/pages/nosotros.html"> Nosotros</a>
-         </div>
-       </nav>
-       <div>
-          <h2>Accesorios</h2>
-          <br>
-          <p class="texto-de-la-pagina"> A estas alturas de mi vida volverme cuerda,<br>
-             sería una locura!!! Atrévete a romperlos estereotipos!</p> 
-          <br>
-        </div>
-     </header>
-             
-      <footer class="footer">
-        <div class="logo">
-          <img src="/img/ColmillosMaquillaje.png"/>
-        </div>
-        <div class="footer-container">
-           <ul>
-             <li><a href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"src="/pages/ubicacion.html">Ubicacion</a></li>
-            <li> Maria Celeste Vargas 2022 </li>
-            </ul>
-        </div>
-       </footer>
       </header>
     </div>
+
+    <nav class="navegador">
+      <div class="nav-1">
+        <a href="/index.html"> Inicio </a>
+        <a href="/pages/nosotros.html"> Nosotros</a>
+      </div>
+    </nav>
+
+    <div class="secciones">
+      <div class="secciones">
+        <img src="../img/Craneo.jpg.png" width="200px" height="200px" alt="craneo">
+       <h2>Accesorios</h2>
+       <p class="texto-de-la-pagina">
+       A estas alturas de mi vida volverme cuerda,<br>
+       sería una locura!!! Atrévete a romper los estereotipos!</p>
+         <img src="../img/BotellasHall.png" alt="Botellas" width="300px" height="300px">
+         <img src="../img/carteras.png" alt="carteras" width="300px" height="300px">
+       </div>
+    </div>
+  
+
+    
+    <footer class="footer">
+      <div class="logo">
+        <img src="/img/ColmillosMaquillaje.png"/>
+      </div>
+
+      <div class="footer-container">
+        <ul>
+         <li>
+           <a
+           href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
+           src="/pages/ubicacion.html">Ubicacion</a>
+         </li>
+         <li>Maria Celeste Vargas 2022</li>
+        </ul>
+      </div>
+
+    </footer>
   </body>
 </html>
