--- a/pages/LoNuevo.html
+++ b/pages/LoNuevo.html
@@ -2,80 +2,59 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Tienda de ropa  accesorios alternativos"
-    />
+    <meta name="description" content="Tienda de ropa  accesorios alternativos"/>
     <meta name="description" content="Maria Celeste" />
-    <meta
-      name="keywords"
-      content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"
-    />
+    <meta name="keywords" content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"/>
+    
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
-  <body>
-    <div class="container-grid">
-      <header class="header">
-        <dive class="borderBlood-img">
-          <img
-            src="../img/BordeSangre.png"
-            alt="bordes de sangre"
-            width="100%"
-            height="500px"
-          />
-          <nav class="navegador">
-            <div class="nav-1">
-              <a href="/index.html"> Inicio </a>
-              <a href="/pages/nosotros.html"> Nosotros</a>
-            </div>
-          </nav>
-        </dive>
-      </header>
+ <body>
+    <div id="container-grid">
+      <div class="borderBlood-img">
+        <img src="../img/BordeSangre.png" alt="bordes de sangre">
+      </div>
+    </div>
 
-      <div>
-        <h2>Lo más Nuevo!!!</h2>
+    <nav class="navegador">
+      <div class="nav-1">
+        <a href="/index.html"> Inicio </a>
+        <a href="/pages/nosotros.html"> Nosotros</a>
+      </div>
+    </nav>
+
+    <div class="secciones">
+      <div class="secciones">
+        <img src="../img/VidriOjo.png" height="200px" width="200px" >
+        <h2>Lo Nuevo</h2>
         <p class="texto-de-la-pagina">
-          Nuevos Productos estan ingresando a la tienda Bloody Cherry<br />
-          esten atentos con los precios de ofertas que se vienen!!
-        </p>
-        <br />
-        <br />
-        <br />
-        <br />
-        <img
-          class="VidriOjo.png"
-          src="/img/VidriOjo.png"
-          height="100px"
-          width="100px"
-        />
-        <img
-          class="RemeCalabaza.png"
-          src="/img/RemeCalabaza.png"
-          height="180px"
-          width="180px"/>
-        <img
-          class="UñasWeb.png"
-          src="/img/UñasWeb.png"
-          height="180px"
-          widght="180px"/>
+        Nuevos Productos estan ingresando a la tienda Bloody Cherry<br>
+        esten atentos con los precios de ofertas que se vienen!!</p>
+      
+        <img class="RemeCalabaza.png"
+        src="/img/RemeCalabaza.png"
+        height="300px"
+        width="300px"/>
+
+        <img class="UñasWeb.png"
+        src="/img/UñasWeb.png"
+        height="300px"
+        widght="300px"/>
+      </div>
+    </div>
+
+   <footer class="footer">
+      <div class="logo">
+        <img src="/img/ColmillosMaquillaje.png"/>
       </div>
 
-      <footer class="footer">
-        <div class="logo">
-          <img src="/img/ColmillosMaquillaje.png" />
-        </div>
-        <div class="footer-container">
-          <ul>
-            <li><a
-                href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
-                src="/pages/ubicacion.html"
-                >Ubicacion</a>
-            </li>
-            <li>Maria Celeste Vargas 2022</li>
-          </ul>
-        </div>
-      </footer>
-    </div>
+      <div class="footer-container">
+        <ul>
+          <li> 
+            <a href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"src="/pages/ubicacion.html">Ubicacion</a></li>
+          <li>Maria Celeste Vargas 2022</li>
+        </ul>
+      </div>
+   </footer>
   </body>
 </html>
