--- a/pages/Maquillajes.html
+++ b/pages/Maquillajes.html
@@ -3,51 +3,53 @@
   <head>
     <meta charset="utf-8" />
     <title>Bloody Cherry</title>
-    <meta
-      name="description"
-      content="Tienda de ropa  accesorios alternativos"/>
+    <meta name="description" content="Tienda de ropa  accesorios alternativos"/>
     <meta name="description" content="Maria Celeste" />
-    <meta
-      name="keywords"
-      content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up" />
+    <meta name="keywords" content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-      <div id="container">
-        <div class="borderBlood-img">
-          <img src="/img/BordeSangre.png" alt="bordes de sangre" widght="1240" height="500"/>
-         </div>
-         <nav class="navegador">
-          <div class="nav-1">
-            <a href="/index.html"> Inicio </a>
-            <a href="/pages/nosotros.html"> Nosotros</a>
-          </div>
-        </nav>
-         <div>
-            <img src="/img/ColmillosMaquillaje.png" height="300"width="400"/>
-            <h2 class="subtitulos"> Maquillajes</h2>
-            <br>
-            <br>
-            <p class="texto-de-la-pagina" >La lucha contra el sistema que nos rodea no es más importante que la <br>
-               lucha contra lo que del sistema tenemos interiorizado!! </p>
-               <br>
-            <img src="/img/MaquillajeUno.png" width="300" height="300"/>
-         </div>
-
-         <footer class="footer">
-          <div class="logo">
-            <img src="/img/ColmillosMaquillaje.png"/>
-          </div>
-          <div class="footer-container">
-                <ul>
-                  <li><a 
-                    href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
-                      src="/pages/ubicacion.html">Ubicacion</a></li>
-                    <li> Maria Celeste Vargas 2022 </li>
-                </ul>
-          </div>
-        </footer>
+    <div id="container-grid">
+      <div class="borderBlood-img">
+        <img src="../img/BordeSangre.png" alt="bordes de sangre" widght="1240" height="500"/>
       </div>
-    </body>
-  </html>
+    </div>
+
+    <nav class="navegador">
+      <div class="nav-1">
+        <a href="/index.html"> Inicio </a>
+        <a href="/pages/nosotros.html"> Nosotros</a>
+      </div>
+    </nav>
+        
+    <div class="secciones">
+      <div class="secciones">
+        <img src="../img/ColmillosMaquillaje.png" height="300"width="400"/>
+        <h2> Maquillajes</h2>
+        <p class="texto-de-la-pagina" >La lucha contra el sistema que nos rodea no es más importante que la <br>
+          lucha contra lo que del sistema tenemos interiorizado!! </p>
+        <img src="/img/MaquillajeUno.png" width="300px" height="300px">
+        <img src="../img/MaquillajeDos.png" width="300px" height="300px">
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="logo">
+        <img src="/img/ColmillosMaquillaje.png"/>
+      </div>
+
+      <div class="footer-container">
+        <ul>
+          <li><a 
+            href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
+            src="/pages/ubicacion.html">Ubicacion</a></li>
+          <li> Maria Celeste Vargas 2022 </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
