--- a/pages/Ropa.html
+++ b/pages/Ropa.html
@@ -2,54 +2,62 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Tienda de ropa  accesorios alternativos"/>
+    <meta name="description"content="Tienda de ropa  accesorios alternativos"/>
     <meta name="description" content="Maria Celeste" />
-    <meta
-      name="keywords"
-      content="bloody cherry, zapatos, ropa, accesorios, maquillajes, dark, pin up"/>
+    <meta name="keywords" content="bloody cherry, zapatos, ropa, accesorios,
+    maquillajes, dark, pin up"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <dive class="container-grid">
-      <header class="header">
-        <div class="borderBlood-img">
-          <img
-          src="../img/BordeSangre.png"
-          alt="bordes de sangre"
-          width="100%"
-          height="500px"/>
-        </div>
-        <nav class="navegador">
-          <div class="nav-1">
-            <a href="/index.html"> Inicio </a>
-            <a href="/pages/nosotros.html"> Nosotros</a>
-          </div>
-        </nav>
-        <div>
-          <h2>Ropa</h2>
-          <br>
-          <p class="texto-de-la-pagina"> No hacen falta medidas perfectas para convertirte en modelo.<br>
-           La calle ya es tu pasarela!!</p>
-          <br>
-          <p class="texto-de-la-pagina"> Que disfruten del Show!</p>
-          <br>
-        </div>
-      </header>
-      
-     <footer class="footer">
-        <div class="logo">
-            <img src="/img/ColmillosMaquillaje.png"/>
-        </div>
-        <div class="footer-container">
-          <ul>
-            <li><a href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"src="/pages/ubicacion.html">Ubicacion</a></li>
-            <li> Maria Celeste Vargas 2022 </li>
-          </ul>
-        </div>
-     </footer>
+    <div id="container-grid">
+      <div class="borderBlood-img">
+        <img
+        src="../img/BordeSangre.png"
+        alt="bordes de sangre"
+        width="100%"
+        height="500px"/>
+      </div>
     </div>
+
+    <nav class="navegador">
+      <div class="nav-1">
+        <a href="/index.html"> Inicio </a>
+        <a href="/pages/nosotros.html"> Nosotros</a>
+      </div>
+    </nav>
+
+    <div class="secciones" >
+      <div class="secciones">
+        <img src="/img/NiñoCalabaza.png" width="300px" height="300px" />
+        <h2>Ropa</h2>
+        <p class="texto-de-la-pagina"> No hacen falta medidas perfectas para convertirte en modelo.<br>
+        La calle ya es tu pasarela!!</p>
+        <br>
+        <p class="texto-de-la-pagina"> Que disfruten del Show!</p>
+        <img src="../img/BuzoEsqueleto.png" width="300px" height="300px">
+        <img src="../img/BuzoAraña.png" width="300px" height="300px">
+        <img src="../img/RemeCalabaza.png" height="300px" width="300px">
+      </div>
+    </div>
+      
+    <footer class="footer">
+      <div class="logo">
+        <img src="/img/ColmillosMaquillaje.png"/>
+      </div>
+
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z" 
+            src="/pages/ubicacion.html">Ubicacion</a>
+          </li>
+          <li> Maria Celeste Vargas 2022 </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
