creation web responsive

--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
           <img
           src="./img/BordeSangre.png"
           alt="bordes-de-sangre"
-          width="100%"
-          height="50px"/>
+          width="100%"/>
           <h1>Bloody Cherry</h1>
         </div>
 
         <nav class="navegador">
           <div class="nav-1">
-           <a href="/index.html"> Inicio </a>
-           <a href="/pages/nosotros.html"> Nosotros</a>
+           <a href="./index.html"> Inicio </a>
+           <a href="../pages/nosotros.html"> Nosotros</a>
           </div>
         </nav>
 
@@ -41,7 +40,7 @@
 
         <div class="secciones">
           <div class="luna-murcielago">
-            <img src="img/LunaMurcielagos.png" width="70%"/>
+            <img src="./img/LunaMurcielagos.png" width="70%"/>
           </div>
         </div>
       </header>
@@ -50,7 +49,7 @@
     <nav>
       <div class="imagenes-nav2">
         <div>
-          <a title="Lo Nuevo" href="/pages/LoNuevo.html" ><img
+          <a title="Lo Nuevo" href="./pages/LoNuevo.html" ><img
           class="img-cerezasPixeladas"
           src="./img/cerezasPixeladas.png"
           alt="cerezas pixeladas"/></a> 
@@ -129,14 +128,14 @@
 
     <footer class="footer">
       <div class="logo">
-        <img src="/img/ColmillosMaquillaje.png"/>
+        <img src="./img/ColmillosMaquillaje.png"/>
       </div>
 
       <div class="footer-container">
         <ul>
           <li>
             <a href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
-              src="/pages/ubicacion.html">Ubicacion</a>
+             >Ubicacion</a>
           </li>
             
           <li> Maria Celeste Vargas 2022 </li>
