--- a/pages/LoNuevo.html
+++ b/pages/LoNuevo.html
@@ -19,7 +19,7 @@
     <nav class="navegador">
       <div class="nav-1">
         <a href="/index.html"> Inicio </a>
-        <a href="/pages/nosotros.html"> Nosotros</a>
+        <a href="../pages/nosotros.html"> Nosotros</a>
       </div>
     </nav>
 
@@ -32,12 +32,12 @@
         esten atentos con los precios de ofertas que se vienen!!</p>
       
         <img class="RemeCalabaza.png"
-        src="/img/RemeCalabaza.png"
+        src="../img/RemeCalabaza.png"
         height="300px"
         width="300px"/>
 
         <img class="UñasWeb.png"
-        src="/img/UñasWeb.png"
+        src="../img/UñasWeb.png"
         height="300px"
         widght="300px"/>
       </div>
@@ -45,7 +45,7 @@
 
    <footer class="footer">
       <div class="logo">
-        <img src="/img/ColmillosMaquillaje.png"/>
+        <img src="../img/ColmillosMaquillaje.png"/>
       </div>
 
       <div class="footer-container">
