--- a/pages/Maquillajes.html
+++ b/pages/Maquillajes.html
@@ -21,8 +21,8 @@
 
     <nav class="navegador">
       <div class="nav-1">
-        <a href="/index.html"> Inicio </a>
-        <a href="/pages/nosotros.html"> Nosotros</a>
+        <a href="../index.html"> Inicio </a>
+        <a href="../pages/nosotros.html"> Nosotros</a>
       </div>
     </nav>
         
@@ -32,21 +32,21 @@
         <h2> Maquillajes</h2>
         <p class="texto-de-la-pagina" >La lucha contra el sistema que nos rodea no es más importante que la <br>
           lucha contra lo que del sistema tenemos interiorizado!! </p>
-        <img src="/img/MaquillajeUno.png" width="300px" height="300px">
+        <img src="../img/MaquillajeUno.png" width="300px" height="300px">
         <img src="../img/MaquillajeDos.png" width="300px" height="300px">
       </div>
     </div>
 
     <footer class="footer">
       <div class="logo">
-        <img src="/img/ColmillosMaquillaje.png"/>
+        <img src="../img/ColmillosMaquillaje.png"/>
       </div>
 
       <div class="footer-container">
         <ul>
           <li><a 
             href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
-            src="/pages/ubicacion.html">Ubicacion</a></li>
+            src="../pages/ubicacion.html">Ubicacion</a></li>
           <li> Maria Celeste Vargas 2022 </li>
         </ul>
       </div>
