--- a/pages/Accesorios.html
+++ b/pages/Accesorios.html
@@ -16,16 +16,15 @@
       <header>
        <div class="borderBlood-img">
           <img src="../img/BordeSangre.png"alt="bordes de sangre"
-           width="100%"
-           height="500px"/>
+           width="100%"/>
        </div>
       </header>
     </div>
 
     <nav class="navegador">
       <div class="nav-1">
-        <a href="/index.html"> Inicio </a>
-        <a href="/pages/nosotros.html"> Nosotros</a>
+        <a href="../index.html"> Inicio </a>
+        <a href="../pages/nosotros.html"> Nosotros</a>
       </div>
     </nav>
 
@@ -45,7 +44,7 @@
     
     <footer class="footer">
       <div class="logo">
-        <img src="/img/ColmillosMaquillaje.png"/>
+        <img src="../img/ColmillosMaquillaje.png"/>
       </div>
 
       <div class="footer-container">
@@ -53,7 +52,7 @@
          <li>
            <a
            href="https://www.google.com.ar/maps/@-34.6268544,-58.3938526,16.09z"
-           src="/pages/ubicacion.html">Ubicacion</a>
+           src="../pages/ubicacion.html">Ubicacion</a>
          </li>
          <li>Maria Celeste Vargas 2022</li>
         </ul>
